src/test/ui/malformed/malformed-plugin-2.stderr
error: malformed `plugin` attribute input
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^ help: must be of the form: `#[plugin(name|name(args))]`

error: aborting due to previous error

