src/test/ui/malformed/malformed-plugin-2.rs
#![feature(plugin)]
#![plugin="bleh"] //~ ERROR malformed `plugin` attribute

fn main() {}
